chenged some code

--- a/requirements.txt
+++ b/requirements.txt
@@ -239,8 +239,8 @@ prompt-toolkit==3.0.36
 protobuf==4.21.12
 psutil==5.9.4
 psycogreen==1.0.2
-psycopg2==2.8.4
-psycopg2-binary==2.9.5
+# psycopg2==2.8.4
+# psycopg2-binary==2.9.5
 ptyprocess==0.7.0
 pur==7.0.0
 pure-eval==0.2.2
